[package]
name = "fhe_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subtle = { version = "2.6.1", features = ["const-generics"] }
base64 = "0.22.1"
bfv12 = "0.1.1"
bincode = "1.3.3"
byteorder = "1.5.0"
once_cell = "1.19.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_2 = { package = "rand", version = "0.6.5" }
serde = { version = "1.0", features = ["derive"] }
itertools = "0.13.0"
num-traits = "0.2.19"
uint = "0.10.0"
num-bigint = { version = "0.4.6", features = ["rand"] }
